# factset-report-analyzer

./: README.md  README_PYPI.md  main.py  pyproject.toml
.github/ci/: setup_google_creds.py
.github/workflows/: data-collection.yml
actions/: workflow.py
actions/steps/: step1_check_pdfs.py  step2_download_pdfs.py  step3_extract_charts.py  step4_process_images.py  step5_upload_cloud.py  step6_generate_plot.py
scripts/data_collection/: download_factset_pdfs.py  extract_eps_charts.py
scripts/testing/: __init__.py  test_coordinate_matching.py  test_csv_update.py  test_multiple_methods_classification.py  test_quarter_eps_sum.py  test_workflow.py
scripts/visualization/: visualize_bar_classification.py  visualize_bar_preprocessing.py  visualize_coordinate_matching.py
src/eps_estimates_collector/: __init__.py
src/eps_estimates_collector/analysis/: __init__.py  pe_ratio.py
src/eps_estimates_collector/utils/: cloudflare.py
src/factset_data_collector/analysis/: pe_ratio.py
src/factset_data_collector/core/ocr/: processor.py
src/factset_report_analyzer/: __init__.py
src/factset_report_analyzer/analysis/: __init__.py  pe_ratio.py
src/factset_report_analyzer/core/: __init__.py  downloader.py  extractor.py
src/factset_report_analyzer/core/ocr/: __init__.py  bar_classifier.py  coordinate_matcher.py  google_vision_processor.py  parser.py  processor.py
src/factset_report_analyzer/utils/: __init__.py
